# quads-jam-2024

./: Cargo.toml  DESIGN.md  README.md  TODO.md  build_wasm.sh  dev.sh  licenses.html  licenses.md  release_wasm.sh
src/: audio.rs  consts.rs  context.rs  dir.rs  entity.rs  lib.rs  main.rs  math.rs  save.rs  scene.rs  settings.rs  texture.rs
src/scene/: credits.rs  gameplay.rs  main_menu.rs  pause.rs
web/: index.html
