[package]
name = "quads_jam_2024"
version = "0.1.0-dev"
edition = "2021"
description = "[compelling description]"
# homepage = "https://example.com"
# repository = "https://example.com"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
gamepads = { version = "0.1.6", default-features = false }
macroquad = { version = "0.4", features=["audio"] }
quad-storage = "0.1.3"
ron = "0.8.1"
serde = { version = "1.0.207", features=["serde_derive"] }
toml = "0.8.19"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package.'*']
opt-level = 3

[package.metadata.bundle]
name = "quads_jam_2024"
identifier = "com.example.quads_jam_2024"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png"]
resources = ["assets"]
copyright = "Your Game THE YEAR"
category = "Some Category"
